syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.common";

package com.glance.spaces.zapp.content.publishing.schemas.common;

import "com/glance/spaces/zapp/content/publishing/schemas/common/count.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/element_cta.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/logo.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/poster.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/tag.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/timestamp.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/title.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/video.proto";

message PublishRoundupCardElement {
  string id = 1;
  Title title = 2;
  Timestamp timestamp = 3;
  Logo logo = 4;
  Poster poster = 5;
  Tag tag = 6;
  Count view_count = 7;
  oneof attributes {
    Video video = 9;
  }
  ElementCta element_cta = 10;
}

