syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.common";

package com.glance.spaces.zapp.content.publishing.schemas.common;

import "com/glance/spaces/zapp/content/publishing/schemas/common/publish_roundup_card_element.proto";

message PublishRoundupDataElement {
  string roundup_name = 1;
  repeated PublishRoundupCardElement roundup_card_element = 2;
}